Hardcodeado el titulo de Sobremi y quitado el firestoredb

--- a/src/app/COMPONENTS/sobre-mi/sobre-mi.component.html
+++ b/src/app/COMPONENTS/sobre-mi/sobre-mi.component.html
@@ -3,7 +3,7 @@
         <mat-icon (click)="cambio.quitar(home.$sobremi)">arrow_back</mat-icon>
         <div class="container_subContainer">
             <div>
-                <h2>{{sobremi[0].titulo}}</h2>
+                <h2>Desarrollador Web Jr. Autodidacta</h2>
             </div>
             <div class="sobremi" *ngFor="let item of listSobreMi">
                 <p>{{item.sobremi}}</p>
