--- a/src/app/COMPONENTS/sobre-mi/sobre-mi.component.html
+++ b/src/app/COMPONENTS/sobre-mi/sobre-mi.component.html
@@ -5,10 +5,16 @@
             <div>
                 <h2>Desarrollador Web Jr. Autodidacta</h2>
             </div>
+            <div *ngIf="!listSobreMi">
+                <mat-spinner></mat-spinner>
+            </div>
             <div class="sobremi" *ngFor="let item of listSobreMi">
                 <p>{{item.sobremi}}</p>
             </div>
             <h2 class="h2duras">Habilidades Duras</h2>
+            <div *ngIf="!listDuras">
+                <mat-spinner></mat-spinner>
+            </div>
             <div class="duras" >
                 <div *ngFor="let item of listDuras" >
                     <button class="button-54">{{item.habilidad}}</button> 
@@ -16,6 +22,9 @@
                 </div>
             </div>
             <h2 class="h2blandas">Habilidades Blandas</h2>
+            <div *ngIf="!listBlandas">
+                <mat-spinner></mat-spinner>
+            </div>
             <div class="duras" >
                 <div *ngFor="let item of listBlandas">
                     <button class="button-63">{{item.habilidad}}</button> 
