--- a/src/app/COMPONENTS/proyectos/proyectos.component.html
+++ b/src/app/COMPONENTS/proyectos/proyectos.component.html
@@ -3,7 +3,10 @@
         <mat-icon (click)="cambio.quitar(home.$proyectos)">arrow_back</mat-icon>
         <h2>Proyectos</h2>
         <div class="container_proyectos">
-
+            <div *ngIf="!lists">
+                <mat-spinner></mat-spinner>
+                <mat-spinner class="segundo_spinner"></mat-spinner>
+            </div>
             <mat-card class="example-card" *ngFor="let item of lists">
                 <mat-card-header>
                     <mat-card-title>{{item.titulo}}</mat-card-title>
