agregada alertas al login

--- a/src/app/PAGES/login/login.component.html
+++ b/src/app/PAGES/login/login.component.html
@@ -1,13 +1,13 @@
 <app-header></app-header>
 <div class="login">
     <div class="container front">
-        <label for="" class="label"> Usuario
+        <label for="" class="label"> Usuario:
             <input type="text" class="formControl" placeholder="Username" #userName required>
         </label>
-        <label for="" class="label"> Password
+        <label for="" class="label"> Password:
             <input type="password" class="formControl" placeholder="Password" #userPassword required>
         </label>
         <!-- <input type="button" class="btn btnPrimary" value="Log in" (click)="authService.SignIn(userName.value, userPassword.value)"> -->
-        <input type="button" class="btn btnPrimary" value="Log in" (click)="iniciarSesion()">
+        <button type="button" class="" (click)="iniciarSesion()">Iniciar sesion</button>
     </div>
 </div>
