sumado padding a login

--- a/src/app/PAGES/login/login.component.html
+++ b/src/app/PAGES/login/login.component.html
@@ -8,6 +8,6 @@
             <input type="password" class="formControl" placeholder="Password" #userPassword required>
         </label>
         <!-- <input type="button" class="btn btnPrimary" value="Log in" (click)="authService.SignIn(userName.value, userPassword.value)"> -->
-        <button type="button" class="" (click)="iniciarSesion()">Iniciar sesion</button>
+        <button type="button" class="button-26" (click)="iniciarSesion()">Iniciar sesion</button>
     </div>
 </div>
