--- a/src/app/PAGES/login/login.component.css
+++ b/src/app/PAGES/login/login.component.css
@@ -5,12 +5,10 @@
     height: 100%;
     background: url("src\assets\images\mountain.jpg");
     background-size: cover;
+}
 
-    /* background: rgb(108,255,59);
-    background: -moz-linear-gradient(90deg, rgba(108,255,59,0.907236222125569) 0%, rgba(26,218,255,1) 66%, rgba(0,212,255,1) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(108,255,59,0.907236222125569) 0%, rgba(26,218,255,1) 66%, rgba(0,212,255,1) 100%);
-    background: linear-gradient(90deg, rgba(108,255,59,0.907236222125569) 0%, rgba(26,218,255,1) 66%, rgba(0,212,255,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#6cff3b",endColorstr="#00d4ff",GradientType=1);  */
+input{
+    padding: 0.2rem;
 }
 
 .container{
@@ -33,4 +31,46 @@
 }
 .label{
     width: 10em;
+}
+
+/* CSS */
+.button-26 {
+  appearance: button;
+  background-color: #1652F0;
+  border: 1px solid #1652F0;
+  border-radius: 4px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-family: Graphik,-apple-system,system-ui,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
+  font-size: 14px;
+  line-height: 1.15;
+  overflow: visible;
+  padding: 12px 16px;
+  position: relative;
+  text-align: center;
+  text-transform: none;
+  transition: all 80ms ease-in-out;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: fit-content;
+}
+
+.button-26:disabled {
+  opacity: .5;
+}
+
+.button-26:focus {
+  outline: 0;
+}
+
+.button-26:hover {
+  background-color: #0A46E4;
+  border-color: #0A46E4;
+}
+
+.button-26:active {
+  background-color: #0039D7;
+  border-color: #0039D7;
 }
