--- a/src/app/COMPONENTS/header/header.component.css
+++ b/src/app/COMPONENTS/header/header.component.css
@@ -4,29 +4,43 @@
     align-items: center;
     justify-content: space-between;
 }
-.icon{
-    color: white;
-    font-size: 3rem;
-    height: 3rem;
-    width: 3rem;
-    margin-right: 2rem;
-    cursor: pointer;
-}
+
 img{
     cursor: pointer;
 }
 
 span{
     color: white;
-    font-size: 3rem;
+    font-size: 2.5rem;
     line-height: 4rem;
     margin-right: 1rem;
     cursor: pointer;
     transition: 0.5s;
 }
+.iniciar_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+.iniciar_container>span{
+    font-size: 1.5rem;
+}
 
+
+.icon{
+    color: white;
+    font-size: 3rem;
+    height: 3rem;
+    width: 3rem;
+    cursor: pointer;
+}
 span:hover{
-    transform: scale(1.1);
+    transform: scale(0.96);
     background-color: rgba(158, 179, 255, 0.393);
     border-radius: 16px;
+}
+
+.iniciar_container>span:hover{
+    transform: scale(0.94);
 }
