--- a/src/app/COMPONENTS/header/header.component.html
+++ b/src/app/COMPONENTS/header/header.component.html
@@ -6,7 +6,10 @@
         <span (click)="logout()">cerrar sesion</span>
     </ng-template>
     <ng-template #elseBlock>
-        <mat-icon class="icon"  routerLink="/login">account_circle</mat-icon>
+        <div class="iniciar_container" routerLink="/login">
+            <span>iniciar sesion</span>
+            <mat-icon class="icon"  routerLink="/login">account_circle</mat-icon>
+        </div>
     
     </ng-template>
 </div>
