--- a/src/app/COMPONENTS/contacto/contacto.component.html
+++ b/src/app/COMPONENTS/contacto/contacto.component.html
@@ -1,12 +1,10 @@
-<div class="containerMayor">
+<div class="upper_background">
     <div class="container">
-        <mat-icon class="arrow" (click)="cambio.quitar(home.$contacto)">arrow_back</mat-icon>
+        <mat-icon class="arrow" (click)="close()">arrow_back</mat-icon>
         <div class="container_container">
-            <div class="contacto_container">
+            <div class="contact_container">
                 <h2>Si es de su interes trabajar conmigo puede contactarme por estos medios</h2>
-    
-                <label for="">Telefono: <span>15-7364-2034</span></label>
-                <label for="">Mail: <span>fabian_guarascio@hotmail.com</span></label>
+                <label for="Mail">Mail: <span>fabian_guarascio@hotmail.com</span></label>
                 <div class="github">
                     <h3>Tambien puede ver mi Github </h3>
                     <a href="https://github.com/FabianGuarascio" target="_Blank">
