--- a/src/app/COMPONENTS/clouds/clouds.component.css
+++ b/src/app/COMPONENTS/clouds/clouds.component.css
@@ -1,13 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
-*{
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    font-family: "Times New Roman", Times, serif;
+#viewport {
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  perspective: 400;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-:root{
+
+#world {
+  height: 512px;
+  left: 50%;
+  margin-left: -256px;
+  margin-top: -256px;
+  position: absolute;
+  top: 50%;
+  transform-style: preserve-3d;
+  width: 512px;
 }
 
 .cloudBase {
