--- a/src/app/COMPONENTS/proyectos/proyectos.component.html
+++ b/src/app/COMPONENTS/proyectos/proyectos.component.html
@@ -1,6 +1,6 @@
 <div class="containerMayor">
     <div class="container">
-        <mat-icon (click)="cambio.quitar(home.$proyectos)">arrow_back</mat-icon>
+        <mat-icon (click)="close()">arrow_back</mat-icon>
         <h2>Proyectos</h2>
         <div class="container_proyectos">
             <div *ngIf="!lists">
@@ -9,18 +9,18 @@
             </div>
             <mat-card class="example-card" *ngFor="let item of lists">
                 <mat-card-header>
-                    <mat-card-title>{{item.titulo}}</mat-card-title>
-                    <mat-card-subtitle>{{item.sub_titulo}}</mat-card-subtitle>
+                    <mat-card-title>{{item.title}}</mat-card-title>
+                    <mat-card-subtitle>{{item.subtitle }}</mat-card-subtitle>
                 </mat-card-header>
-                <img mat-card-image src="{{item.url_imagen}}" alt="thumbnail">
+                <img mat-card-image [src]="item.image " alt="thumbnail">
                 <mat-card-content>
                     <p>
-                        {{item.descripcion}}
+                        {{item.description}}
                     </p>
                 </mat-card-content>
                 <mat-card-actions>
                     <button mat-button class="matbtn">
-                        <a href="{{item.url_proyecto}}" target="_blank">ir al sitio</a>
+                        <a [href]="item.link" target="_blank">ir al sitio</a>
                     </button>
                 </mat-card-actions>
             </mat-card>
