Added a feature to allow user input to show pages

--- a/src/app/COMPONENTS/sobre-mi/sobre-mi.component.html
+++ b/src/app/COMPONENTS/sobre-mi/sobre-mi.component.html
@@ -6,7 +6,7 @@
             <p>
               Actualmente trabajando como Front-end / fullstack en una empresa de ciberseguridad de Argentina.
               Me encantan los perros , la inteligencia artifical y los teclado RGB.
-              Actualmente buscando desarrollarme mas en el area de back-end con sping-boot
+              Actualmente buscando desarrollarme más en el area de back-end con sping-boot
             </p>
         </div>
     </div>
