--- a/src/app/PAGES/home/home.component.css
+++ b/src/app/PAGES/home/home.component.css
@@ -1,78 +1,121 @@
-.sobreMi{
-    position: absolute;
-    transform: translateX(-100%);
-    height: 95%;
-    transition: 2s;
-    padding: 1em;
-}
+
 h1{
-    font-family: "Times New Roman", Times, serif;
-    font-size: 2.8rem;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 2.8rem;
 }
 span{
-    font-size: 1.3rem;
+  font-size: 1.3rem;
 }
 
+.sections_container{
+  display: flex;
+  gap: 1rem;
+}
+.about_me{
+  position: absolute;
+  transform: translateX(-100%);
+  transition: 2s;
+  transition-property: transform;
+  padding: 1em;
+  height: 95%;
+  z-index: 10;
+}
 .proyectos{
-    position: absolute;
-    transform : translate(0% ,-100%);
-    transition: 2s;
-    padding: 1em;
-    height: 95%;
-
+  position: absolute;
+  transform : translate(0% ,-100%);
+  transition: 2s;
+  transition-property: transform;
+  padding: 1em;
+  height: 95%;
+  z-index: 10;
 }
 .contacto{
-    position: absolute;
-    transform: translate(105%);
-    transition: 2s;
-    padding: 1em;
-    height: 95%;
+  position: absolute;
+  transform: translate(105%);
+  transition: 2s;
+  transition-property: transform;
+  padding: 1em;
+  height: 95%;
+  z-index: 10;
+
 }
 
 .show{
-    transform: translate(0%,0%);
+  transform: translate(0%,0%);
 }
 
 .container{
-    background: url("src\assets\images\mountain.jpg");
-    background-size: cover;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 1em;
+  background: url("src\assets\images\mountain.jpg");
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1em;
 }
 
-span{
-padding: 1em;
-cursor: pointer;
-font-weight: 800;
-transition: 0.4s;
+.link{
+  font-size: 2rem;
+  padding: 1.4rem;
+  cursor: pointer;
+  font-weight: 800;
+  transition: 0.4s;
+  transition-property: background-color, color;
+  position: relative;
 }
-span:hover{
+
+.link::after{
+  content: attr(ctrl);
+  text-align: start;
+  color: black;
+  position: absolute;
+  font-size: large;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 61%);
+  border: black solid 1px;
+  background-color: rgba( 255, 255, 255,0.7);
+  box-shadow: 4px 5px 4px;
+  border-radius: 4px;
+}
+.link:hover{
     background-color: rgba(0, 166, 255, 0.43);
     color: white;
 }
+
+.hot_key{
+  font-size: 1.5rem;
+  font-weight: 800;
+  text-align: center;
+  color: black;
+  text-shadow: 0px 1px 2px rgb(255 255 255 / 80%);
+}
+
 @media (max-width:800px){
-    .spanContainer{
+    /* .spanContainer{
         color: white;
-    }
+    } */
 }
 
 @media (max-width:600px){
-    .spanContainer{
+    .sections_container{
         display: flex;
         flex-direction: column;
         color: aliceblue;
     }
-    .sobreMi{
+    .link::after{
+      display: none;
+    }
+    .about_me{
         height: 100%;
     }
     h1{
         text-align: center;
     }
 }
+
+
 
 
 
