--- a/src/app/PAGES/home/home.component.html
+++ b/src/app/PAGES/home/home.component.html
@@ -1,5 +1,5 @@
 <app-sobre-mi
-  class="sobreMi"
+  class="about_me"
   [ngClass]="{'show':cardToShow === 'about-me'}"
   (closeWindowEvent)="cardToShow = null"
   ></app-sobre-mi>
@@ -15,10 +15,31 @@
   ></app-contacto>
 <div class="container">
     <h1>Fabian Guarascio</h1>
-    <div class="spanContainer">
-        <span (click)="addClassToShow('about-me')">sobre mi</span>
-        <span (click)="addClassToShow('projects')">proyectos</span>
-        <span (click)="addClassToShow('contact')">contacto</span>
+    <div class="sections_container">
+        <div class="link_container">
+          <p
+            class="link"
+            ctrl="Ctrl + A"
+            (click)="addClassToShow('about-me')">
+              Sobre mí
+          </p>
+        </div>
+        <div class="link_container">
+          <p
+            class="link"
+            ctrl="Ctrl + P"
+            (click)="addClassToShow('projects')">
+              Proyectos
+          </p>
+        </div>
+        <div class="link_container">
+          <p
+            class="link"
+            ctrl="Ctrl + C"
+            (click)="addClassToShow('contact')">
+              Contacto
+          </p>
+        </div>
     </div>
 </div>
 
