--- a/src/app/COMPONENTS/proyectos/proyectos.component.html
+++ b/src/app/COMPONENTS/proyectos/proyectos.component.html
@@ -1,7 +1,7 @@
 <div class="containerMayor">
     <div class="container">
         <mat-icon (click)="close()">arrow_back</mat-icon>
-        <h2>Proyectos</h2>
+        <h2>Projects</h2>
         <div class="container_proyectos">
             <div *ngIf="!lists">
                 <mat-spinner></mat-spinner>
@@ -20,7 +20,7 @@
                 </mat-card-content>
                 <mat-card-actions>
                     <button mat-button class="matbtn">
-                        <a [href]="item.link" target="_blank">ir al sitio</a>
+                        <a [href]="item.link" target="_blank">Go to the site</a>
                     </button>
                 </mat-card-actions>
             </mat-card>
