feat(translations): transalted to english my portfolio

--- a/src/app/COMPONENTS/sobre-mi/sobre-mi.component.html
+++ b/src/app/COMPONENTS/sobre-mi/sobre-mi.component.html
@@ -4,10 +4,13 @@
         <div class="content">
             <h2 class="css-text-mask">Angular developer </h2>
             <p>
-              Actualmente trabajando como Front-end / fullstack en una empresa de ciberseguridad de Argentina.
-              Me encantan los perros , la inteligencia artifical y los teclado RGB.
-              Actualmente buscando desarrollarme más en el area de back-end con sping-boot
+              Front End software developer currently working at Insside Ciberscurity in a enterprise product for international customers.
+
+              I love dogs and artificial inteligence.
+
+              Looking to expand my career with new and exiting projects.
             </p>
+
         </div>
     </div>
 </div>
