--- a/src/app/PAGES/home/home.component.html
+++ b/src/app/PAGES/home/home.component.html
@@ -21,7 +21,7 @@
             class="link"
             ctrl="Ctrl + A"
             (click)="addClassToShow('about-me')">
-              Sobre mí
+              About me
           </p>
         </div>
         <div class="link_container">
@@ -29,7 +29,7 @@
             class="link"
             ctrl="Ctrl + P"
             (click)="addClassToShow('projects')">
-              Proyectos
+              Projects
           </p>
         </div>
         <div class="link_container">
@@ -37,7 +37,7 @@
             class="link"
             ctrl="Ctrl + C"
             (click)="addClassToShow('contact')">
-              Contacto
+              Contact
           </p>
         </div>
     </div>
